--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
  },
  "repository": {
   "type": "git",
-  "url": "https://github.com/inexperienced-developer/InexperiencedDeveloperCore",
+  "url": "https://github.com/inexperienced-developer/InexperiencedDeveloperCore"
  },
   "author": {
     "name": "Inexperienced Developer",
